Revise home page title

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-        <head><title>Home Page</title></head>
+        <head><title>Home Page - push to github</title></head>
         <H1>Hello</H1>
         <p>I like the use of JSON_QUERY to avoid sub-queries in the main JSON build. </p>
 </body>
